fix: spacing

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -215,6 +215,9 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
   .mx-1 {
     margin-inline: calc(var(--spacing) * 1);
   }
@@ -387,6 +390,9 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-white) 70%, transparent);
     }
+  }
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
